refactor: 💡 update dialog namings through application

--- a/apps/frontend/src/app/components/document-widget/document-widget.component.html
+++ b/apps/frontend/src/app/components/document-widget/document-widget.component.html
@@ -20,7 +20,7 @@
     <button
       mat-raised-button
       class="secondary-btn"
-      (click)="updateDocumentDialog()"
+      (click)="openDocumentUpdateDialog()"
       data-cy="document-edit-btn"
     >
       Edit <mat-icon>https</mat-icon>
