--- a/apps/frontend/src/app/pages/documents/documents.component.html
+++ b/apps/frontend/src/app/pages/documents/documents.component.html
@@ -27,7 +27,7 @@
     <button
       mat-raised-button
       class="action-btn"
-      (click)="openCreateDocumentDialog()"
+      (click)="openCreateDialog()"
       data-cy="documents-add-btn"
     >
       Add document <mat-icon>https</mat-icon>
