--- a/apps/frontend/src/app/pages/announcements/announcements.component.html
+++ b/apps/frontend/src/app/pages/announcements/announcements.component.html
@@ -25,7 +25,7 @@
       >
         Expired
       </button>
-      <button mat-raised-button class="action-btn" (click)="openCreateAnnouncement()">
+      <button mat-raised-button class="action-btn" (click)="openCreateDialog()">
         Add Announcement
       </button>
     </div>
@@ -40,7 +40,7 @@
           mat-cell
           *matCellDef="let item"
           class="comments-field"
-          (click)="openEditAnnouncement(item)"
+          (click)="openEditDialog(item)"
         >
           {{ item.title }}
         </td>
@@ -52,7 +52,7 @@
           mat-cell
           *matCellDef="let item"
           class="comments-field"
-          (click)="openEditAnnouncement(item)"
+          (click)="openEditDialog(item)"
         >
           {{ item.comments }}
         </td>
@@ -60,14 +60,14 @@
 
       <ng-container matColumnDef="showFrom">
         <th mat-header-cell *matHeaderCellDef>Show <br />From</th>
-        <td mat-cell *matCellDef="let item" (click)="openEditAnnouncement(item)">
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.showFrom | date : 'dd/MM/YY' }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="showTo">
         <th mat-header-cell *matHeaderCellDef>Show <br />To</th>
-        <td mat-cell *matCellDef="let item" (click)="openEditAnnouncement(item)">
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.showTo | date : 'dd/MM/YY' }}
         </td>
       </ng-container>
@@ -87,7 +87,7 @@
           mat-cell
           *matCellDef="let item"
           class="small-field"
-          (click)="openEditAnnouncement(item)"
+          (click)="openEditDialog(item)"
         >
           <div class="status" [ngClass]="getStatus(item.showFrom, item.showTo)">
             {{ getStatus(item.showFrom, item.showTo) }}
