--- a/apps/frontend/src/app/pages/assignments/assignments.component.html
+++ b/apps/frontend/src/app/pages/assignments/assignments.component.html
@@ -2,7 +2,7 @@
   <div class="table-actions" style="justify-content: end">
     <div class="table-buttons">
       <button mat-raised-button class="basic-btn" (click)="openTableInfo()">Table info</button>
-      <button mat-raised-button class="action-btn" (click)="createAssignment()">
+      <button mat-raised-button class="action-btn" (click)="openCreateDialog()">
         Add assignment
       </button>
     </div>
@@ -57,7 +57,7 @@
         mat-row
         [ngClass]="row.completedAt ? 'completed' : ''"
         *matRowDef="let row; columns: assignmentColumns"
-        (click)="editAssignment(row)"
+        (click)="openEditDialog(row)"
       ></tr>
     </table>
 
