--- a/apps/frontend/src/app/pages/bikes/bikes.component.html
+++ b/apps/frontend/src/app/pages/bikes/bikes.component.html
@@ -29,7 +29,7 @@
 
     <div class="table-buttons">
       <button mat-raised-button class="basic-btn" (click)="openTableInfo()">Table info</button>
-      <button class="action-btn" (click)="openCreateBikeDialog()" mat-raised-button>
+      <button class="action-btn" (click)="openCreateDialog()" mat-raised-button>
         Add Bike
       </button>
     </div>
@@ -40,42 +40,42 @@
     <table mat-table [dataSource]="filteredBikeList" *ngIf="!isLoading">
       <ng-container matColumnDef="room">
         <th mat-header-cell *matHeaderCellDef>Room nr.</th>
-        <td mat-cell *matCellDef="let item" (click)="openDialogEdit(item)">
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.room }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>Name</th>
-        <td mat-cell *matCellDef="let item" (click)="openDialogEdit(item)">
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.name }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="reservedBy">
         <th mat-header-cell *matHeaderCellDef>Reserved by</th>
-        <td mat-cell *matCellDef="let item" (click)="openDialogEdit(item)">
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.reservedBy }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="nrOfBikes">
         <th mat-header-cell *matHeaderCellDef>Nr. of bikes</th>
-        <td mat-cell *matCellDef="let item" (click)="openDialogEdit(item)">
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.nrOfBikes }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="pickUpTime">
         <th mat-header-cell *matHeaderCellDef>Pick up time</th>
-        <td mat-cell *matCellDef="let item" (click)="openDialogEdit(item)">
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.pickUpTime ? (item.pickUpTime | date : 'dd/MM HH:mm') : '-' }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="completedAt">
         <th mat-header-cell *matHeaderCellDef>Returned</th>
-        <td mat-cell *matCellDef="let item" (click)="openDialogEdit(item)">
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.completedAt ? (item.completedAt | date : 'dd/MM HH:mm') : '-' }}
         </td>
       </ng-container>
@@ -85,7 +85,7 @@
         <td
           mat-cell
           *matCellDef="let item"
-          (click)="openDialogEdit(item)"
+          (click)="openEditDialog(item)"
           class="comments-field"
         >
           {{ item.comments ? item.comments : '-' }}
