--- a/apps/frontend/src/app/pages/cars/cars.component.html
+++ b/apps/frontend/src/app/pages/cars/cars.component.html
@@ -29,7 +29,7 @@
       <button class="secondary-btn" (click)="toggleShowAll()" mat-raised-button>
         {{ showAll ? 'Show Current' : 'Show All' }}
       </button>
-      <button class="action-btn" (click)="openCreateCarDialog()" mat-raised-button>Add Car</button>
+      <button class="action-btn" (click)="openCreateDialog()" mat-raised-button>Add Car</button>
     </div>
   </div>
   <hr />
@@ -38,35 +38,35 @@
     <table mat-table [dataSource]="filteredCarList" *ngIf="!isLoading">
       <ng-container matColumnDef="room">
         <th mat-header-cell *matHeaderCellDef>Room nr.</th>
-        <td mat-cell *matCellDef="let item" (click)="openDialogEdit(item)">
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.room }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="tagNr">
         <th mat-header-cell *matHeaderCellDef>Tag nr.</th>
-        <td mat-cell *matCellDef="let item" (click)="openDialogEdit(item)">
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.tagNr }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="arrivalDate">
         <th mat-header-cell *matHeaderCellDef>Arr.</th>
-        <td mat-cell *matCellDef="let item" (click)="openDialogEdit(item)">
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.arrivalDate ? (item.arrivalDate | date : 'dd/MM') : '-' }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="departureDate">
         <th mat-header-cell *matHeaderCellDef>Dep.</th>
-        <td mat-cell *matCellDef="let item" (click)="openDialogEdit(item)">
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.departureDate ? (item.departureDate | date : 'dd/MM') : '-' }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>Name</th>
-        <td mat-cell *matCellDef="let item" (click)="openDialogEdit(item)">
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.name }}
         </td>
       </ng-container>
@@ -91,63 +91,63 @@
 
       <ng-container matColumnDef="expirationDateTime">
         <th mat-header-cell *matHeaderCellDef>Park<br />exp.</th>
-        <td mat-cell *matCellDef="let item" (click)="openDialogEdit(item)">
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.expirationDate ? (item.expirationDate | date : 'dd/MM HH:mm') : '-' }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="pickUpDateTime">
         <th mat-header-cell *matHeaderCellDef>Pick<br />up time</th>
-        <td mat-cell *matCellDef="let item" (click)="openDialogEdit(item)">
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.pickUpTime ? (item.pickUpTime | date : 'dd/MM HH:mm') : 'Call down' }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="bbDown">
         <th mat-header-cell *matHeaderCellDef>BB down</th>
-        <td mat-cell *matCellDef="let item" (click)="openDialogEdit(item)">
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.bbDown ? item.bbDown : '-' }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="bbUp">
         <th mat-header-cell *matHeaderCellDef>BB up</th>
-        <td mat-cell *matCellDef="let item" (click)="openDialogEdit(item)">
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.bbUp ? item.bbUp : '-' }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="location">
         <th mat-header-cell *matHeaderCellDef>Location</th>
-        <td mat-cell *matCellDef="let item" (click)="openDialogEdit(item)">
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.location ? item.location : '-' }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="parkingLot">
         <th mat-header-cell *matHeaderCellDef>Lot</th>
-        <td mat-cell *matCellDef="let item" (click)="openDialogEdit(item)">
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.parkingLot ? item.parkingLot : '-' }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="deliveryDateTime">
         <th mat-header-cell *matHeaderCellDef>Delivery<br />time</th>
-        <td mat-cell *matCellDef="let item" (click)="openDialogEdit(item)">
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.deliveryTime ? (item.deliveryTime | date : 'dd/MM HH:mm') : '-' }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="bbOut">
         <th mat-header-cell *matHeaderCellDef>BB out</th>
-        <td mat-cell *matCellDef="let item" (click)="openDialogEdit(item)">
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.bbOut ? item.bbOut : '-' }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="comments">
         <th mat-header-cell *matHeaderCellDef>Comments</th>
-        <td mat-cell *matCellDef="let item" (click)="openDialogEdit(item)" class="comments-field">
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)" class="comments-field">
           {{ item.comments ? item.comments : '-' }}
         </td>
       </ng-container>
