--- a/apps/frontend/src/app/pages/checkin/checkin.component.html
+++ b/apps/frontend/src/app/pages/checkin/checkin.component.html
@@ -28,7 +28,7 @@
 
     <div class="table-buttons">
       <button mat-raised-button class="basic-btn" (click)="openTableInfo()">Table info</button>
-      <button mat-raised-button class="action-btn" (click)="openCheckinCreateDialog()">
+      <button mat-raised-button class="action-btn" (click)="openCreateDialog()">
         Add Check In
       </button>
     </div>
@@ -39,19 +39,19 @@
     <table mat-table [dataSource]="checkinLuggage" *ngIf="!isLoading">
       <ng-container matColumnDef="room">
         <th mat-header-cell *matHeaderCellDef>Room nr.</th>
-        <td mat-cell *matCellDef="let item" (click)="openCheckinEditDialog(item)">
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.room ? item.room : '-'}}
         </td>
       </ng-container>
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>Name</th>
-        <td mat-cell *matCellDef="let item" (click)="openCheckinEditDialog(item)">
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.name }}
         </td>
       </ng-container>
       <ng-container matColumnDef="arrivalTime">
         <th mat-header-cell *matHeaderCellDef>Time of<br />arrival</th>
-        <td mat-cell *matCellDef="let item" (click)="openCheckinEditDialog(item)">
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.arrivalTime ? (item.arrivalTime | date : 'HH:mm') : '-' }}
         </td>
       </ng-container>
@@ -73,19 +73,19 @@
       </ng-container>
       <ng-container matColumnDef="tagNr">
         <th mat-header-cell *matHeaderCellDef>Tag nr.</th>
-        <td mat-cell *matCellDef="let item" (click)="openCheckinEditDialog(item)">
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.tagNr }}
         </td>
       </ng-container>
       <ng-container matColumnDef="bbLr">
         <th mat-header-cell *matHeaderCellDef>BB in LR</th>
-        <td mat-cell *matCellDef="let item" (click)="openCheckinEditDialog(item)">
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.bbLr }}
         </td>
       </ng-container>
       <ng-container matColumnDef="location">
         <th mat-header-cell *matHeaderCellDef>Location</th>
-        <td mat-cell *matCellDef="let item" (click)="openCheckinEditDialog(item)">
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.location }}
         </td>
       </ng-container>
@@ -94,13 +94,13 @@
           Time in<br />
           room
         </th>
-        <td mat-cell *matCellDef="let item" (click)="openCheckinEditDialog(item)">
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.completedAt ? (item.completedAt | date : 'HH:mm') : '-' }}
         </td>
       </ng-container>
       <ng-container matColumnDef="bbOut">
         <th mat-header-cell *matHeaderCellDef>BB up</th>
-        <td mat-cell *matCellDef="let item" (click)="openCheckinEditDialog(item)">
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.bbOut ? item.bbOut : '-' }}
         </td>
       </ng-container>
@@ -109,7 +109,7 @@
         <td
           mat-cell
           *matCellDef="let item"
-          (click)="openCheckinEditDialog(item)"
+          (click)="openEditDialog(item)"
           class="comments-field"
         >
           {{ item.comments ? item.comments : '-' }}
