--- a/apps/frontend/src/app/pages/checkout/checkout.component.html
+++ b/apps/frontend/src/app/pages/checkout/checkout.component.html
@@ -27,7 +27,7 @@
 
     <div class="table-buttons">
       <button mat-raised-button class="basic-btn" (click)="openTableInfo()">Table info</button>
-      <button mat-raised-button class="action-btn" (click)="openCheckoutCreateDialog()">
+      <button mat-raised-button class="action-btn" (click)="openCreateDialog()">
         Add Check Out
       </button>
     </div>
@@ -38,13 +38,13 @@
     <table mat-table [dataSource]="checkoutLuggage" *ngIf="!isLoading">
       <ng-container matColumnDef="room">
         <th mat-header-cell *matHeaderCellDef>Room nr.</th>
-        <td mat-cell *matCellDef="let item" (click)="openCheckoutEditDialog(item)">
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.room }}
         </td>
       </ng-container>
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>Name</th>
-        <td mat-cell *matCellDef="let item" (click)="openCheckoutEditDialog(item)">
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.name }}
         </td>
       </ng-container>
@@ -66,37 +66,37 @@
       </ng-container>
       <ng-container matColumnDef="tagNr">
         <th mat-header-cell *matHeaderCellDef>Tag nr.</th>
-        <td mat-cell *matCellDef="let item" (click)="openCheckoutEditDialog(item)">
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.tagNr }}
         </td>
       </ng-container>
       <ng-container matColumnDef="bbDown">
         <th mat-header-cell *matHeaderCellDef>BB down</th>
-        <td mat-cell *matCellDef="let item" (click)="openCheckoutEditDialog(item)">
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.bbDown }}
         </td>
       </ng-container>
       <ng-container matColumnDef="location">
         <th mat-header-cell *matHeaderCellDef>Location</th>
-        <td mat-cell *matCellDef="let item" (click)="openCheckoutEditDialog(item)">
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.location }}
         </td>
       </ng-container>
       <ng-container matColumnDef="bbLr">
         <th mat-header-cell *matHeaderCellDef>BB<br />in LR</th>
-        <td mat-cell *matCellDef="let item" (click)="openCheckoutEditDialog(item)">
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.bbLr }}
         </td>
       </ng-container>
       <ng-container matColumnDef="completedAt">
         <th mat-header-cell *matHeaderCellDef>Time out</th>
-        <td mat-cell *matCellDef="let item" (click)="openCheckoutEditDialog(item)">
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.completedAt ? (item.completedAt | date : 'HH:mm') : '-' }}
         </td>
       </ng-container>
       <ng-container matColumnDef="bbOut">
         <th mat-header-cell *matHeaderCellDef>BB out</th>
-        <td mat-cell *matCellDef="let item" (click)="openCheckoutEditDialog(item)">
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.bbOut ? item.bbOut : '-' }}
         </td>
       </ng-container>
@@ -105,7 +105,7 @@
         <td
           mat-cell
           *matCellDef="let item"
-          (click)="openCheckoutEditDialog(item)"
+          (click)="openEditDialog(item)"
           class="comments-field"
         >
           {{ item.comments ? item.comments : '-' }}
