feat: 🎸 upgrade styling for files

--- a/apps/frontend/src/app/components/file-upload/file-upload.component.scss
+++ b/apps/frontend/src/app/components/file-upload/file-upload.component.scss
@@ -7,6 +7,14 @@
   align-items: center;
 }
 
+.file-container {
+  width: calc(100% - 24px);
+  margin-right: 24px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
 .file-upload-icon {
   width: 100px;
 }
