--- a/apps/frontend/src/styles.css
+++ b/apps/frontend/src/styles.css
@@ -97,3 +97,22 @@ input:-webkit-autofill:active {
 body {
   overflow: hidden;
 }
+
+.close-dialog-btn {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 30px;
+  background-color: var(--main-blue);
+  color: white;
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+}
+
+.close-dialog-btn.small {
+  width: 20px;
+  height: 20px;
+}
