--- a/apps/frontend/src/app/components/document-widget/see-document-dialog/see-document-dialog.component.html
+++ b/apps/frontend/src/app/components/document-widget/see-document-dialog/see-document-dialog.component.html
@@ -1,7 +1,7 @@
 <section class="dialog-section">
   <div class="title-container">
     <h2>{{ document?.title }}</h2>
-    <button class="secondary-btn" mat-raised-button mat-dialog-close type="button">X</button>
+    <button mat-dialog-close type="button" class="close-dialog-btn">X</button>
   </div>
   <div class="dialog-content" *ngIf="!isLoading">
     <div class="document-container">
