--- a/apps/frontend/src/app/pages/checkout/create-checkout-dialog/create-checkout-dialog.component.html
+++ b/apps/frontend/src/app/pages/checkout/create-checkout-dialog/create-checkout-dialog.component.html
@@ -1,7 +1,7 @@
 <form (ngSubmit)="onSubmit()" [formGroup]="form" class="dialog-container">
   <div class="title-container">
     <h1>Create Check Out</h1>
-    <a mat-dialog-close type="button">X</a>
+    <button mat-dialog-close type="button" class="close-dialog-btn">X</button>
   </div>
   <hr />
 
