--- a/apps/frontend/src/app/pages/documents/create-document-dialog/create-document-dialog.component.html
+++ b/apps/frontend/src/app/pages/documents/create-document-dialog/create-document-dialog.component.html
@@ -6,7 +6,7 @@
 >
   <div class="title-container">
     <h1>Add Document</h1>
-    <a mat-dialog-close type="button">X</a>
+    <button mat-dialog-close type="button" class="close-dialog-btn">X</button>
   </div>
   <hr />
 
