--- a/apps/frontend/src/app/pages/documents/update-document-dialog/update-document-dialog.component.html
+++ b/apps/frontend/src/app/pages/documents/update-document-dialog/update-document-dialog.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="form" (ngSubmit)="onSubmit()" class="dialog-container">
   <div class="title-container">
     <h1>Update Document</h1>
-    <a mat-dialog-close type="button">X</a>
+    <button mat-dialog-close type="button" class="close-dialog-btn">X</button>
   </div>
   <hr />
 
