--- a/apps/frontend/src/app/pages/tasks/edit-task-dialog/edit-task-dialog.component.html
+++ b/apps/frontend/src/app/pages/tasks/edit-task-dialog/edit-task-dialog.component.html
@@ -1,7 +1,7 @@
 <form (ngSubmit)="onSubmit()" [formGroup]="form">
   <div class="title-container">
     <h1>Complete Task</h1>
-    <a mat-dialog-close type="button">X</a>
+    <button mat-dialog-close type="button" class="close-dialog-btn">X</button>
   </div>
   <hr />
   <div class="dialog-row">
