feat: 🎸 center image/video when only one is present

--- a/apps/frontend/src/app/components/view-images-dialog/view-images-dialog.component.scss
+++ b/apps/frontend/src/app/components/view-images-dialog/view-images-dialog.component.scss
@@ -4,13 +4,17 @@
   justify-content: flex-start;
   align-items: center;
   overflow: scroll;
-}
 
-.image,
-.video {
-  height: 500px;
-  width: auto;
-  margin: 10px 5px;
+  .image,
+  .video {
+    height: 500px;
+    width: auto;
+    margin: 10px 5px;
+  }
+
+  &.center-item {
+    justify-content: center;
+  }
 }
 
 .loading-icon {
