--- a/apps/frontend/src/app/components/view-images-dialog/view-images-dialog.component.html
+++ b/apps/frontend/src/app/components/view-images-dialog/view-images-dialog.component.html
@@ -4,7 +4,11 @@
 </div>
 <hr />
 
-<section class="image-list" [ngClass]="{'center-item' : images.length + videos.length === 1}" *ngIf="!isLoading">
+<section
+  class="image-list"
+  [ngClass]="{ 'center-item': images.length + videos.length === 1 }"
+  *ngIf="!isLoading"
+>
   <ng-container class="image" *ngFor="let image of images">
     <img [src]="image" alt="An image" class="image" />
   </ng-container>
