--- a/apps/frontend/src/app/pages/announcements/announcements.component.html
+++ b/apps/frontend/src/app/pages/announcements/announcements.component.html
@@ -36,24 +36,14 @@
     <table mat-table [dataSource]="displayAnnouncementList" *ngIf="!isLoading">
       <ng-container matColumnDef="title">
         <th mat-header-cell *matHeaderCellDef>Title</th>
-        <td
-          mat-cell
-          *matCellDef="let item"
-          class="comments-field"
-          (click)="openEditDialog(item)"
-        >
+        <td mat-cell *matCellDef="let item" class="comments-field" (click)="openEditDialog(item)">
           {{ item.title }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="comments">
         <th mat-header-cell *matHeaderCellDef>Description</th>
-        <td
-          mat-cell
-          *matCellDef="let item"
-          class="comments-field"
-          (click)="openEditDialog(item)"
-        >
+        <td mat-cell *matCellDef="let item" class="comments-field" (click)="openEditDialog(item)">
           {{ item.comments }}
         </td>
       </ng-container>
@@ -75,20 +65,22 @@
       <ng-container matColumnDef="files">
         <th mat-header-cell *matHeaderCellDef>Images</th>
         <td mat-cell *matCellDef="let item" class="small-field">
-          <button mat-raised-button class="secondary-btn" (click)="viewFiles(item)" [disabled]="item.files.length === 0">
-            <img src="assets/icons/link-icon.svg" alt="link icon" class="link-icon" /> ({{item.files.length}})
+          <button
+            mat-raised-button
+            class="secondary-btn"
+            (click)="viewFiles(item)"
+            [disabled]="item.files.length === 0"
+          >
+            <img src="assets/icons/link-icon.svg" alt="link icon" class="link-icon" /> ({{
+              item.files.length
+            }})
           </button>
         </td>
       </ng-container>
 
       <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef>Status</th>
-        <td
-          mat-cell
-          *matCellDef="let item"
-          class="small-field"
-          (click)="openEditDialog(item)"
-        >
+        <td mat-cell *matCellDef="let item" class="small-field" (click)="openEditDialog(item)">
           <div class="status" [ngClass]="getStatus(item.showFrom, item.showTo)">
             {{ getStatus(item.showFrom, item.showTo) }}
           </div>
