--- a/apps/frontend/src/app/pages/bikes/bikes.component.html
+++ b/apps/frontend/src/app/pages/bikes/bikes.component.html
@@ -29,9 +29,7 @@
 
     <div class="table-buttons">
       <button mat-raised-button class="basic-btn" (click)="openTableInfo()">Table info</button>
-      <button class="action-btn" (click)="openCreateDialog()" mat-raised-button>
-        Add Bike
-      </button>
+      <button class="action-btn" (click)="openCreateDialog()" mat-raised-button>Add Bike</button>
     </div>
   </div>
   <hr />
@@ -82,12 +80,7 @@
 
       <ng-container matColumnDef="comments">
         <th mat-header-cell *matHeaderCellDef>Comments</th>
-        <td
-          mat-cell
-          *matCellDef="let item"
-          (click)="openEditDialog(item)"
-          class="comments-field"
-        >
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)" class="comments-field">
           {{ item.comments ? item.comments : '-' }}
         </td>
       </ng-container>
