--- a/apps/frontend/src/app/pages/checkin/checkin.component.html
+++ b/apps/frontend/src/app/pages/checkin/checkin.component.html
@@ -40,7 +40,7 @@
       <ng-container matColumnDef="room">
         <th mat-header-cell *matHeaderCellDef>Room nr.</th>
         <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
-          {{ item.room ? item.room : '-'}}
+          {{ item.room ? item.room : '-' }}
         </td>
       </ng-container>
       <ng-container matColumnDef="name">
@@ -106,12 +106,7 @@
       </ng-container>
       <ng-container matColumnDef="comments">
         <th mat-header-cell *matHeaderCellDef>Comments</th>
-        <td
-          mat-cell
-          *matCellDef="let item"
-          (click)="openEditDialog(item)"
-          class="comments-field"
-        >
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)" class="comments-field">
           {{ item.comments ? item.comments : '-' }}
         </td>
       </ng-container>
