--- a/apps/frontend/src/app/pages/checkout/checkout.component.html
+++ b/apps/frontend/src/app/pages/checkout/checkout.component.html
@@ -102,12 +102,7 @@
       </ng-container>
       <ng-container matColumnDef="comments">
         <th mat-header-cell *matHeaderCellDef>Comments</th>
-        <td
-          mat-cell
-          *matCellDef="let item"
-          (click)="openEditDialog(item)"
-          class="comments-field"
-        >
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)" class="comments-field">
           {{ item.comments ? item.comments : '-' }}
         </td>
       </ng-container>
