--- a/apps/frontend/src/app/pages/longterm/longterm.component.html
+++ b/apps/frontend/src/app/pages/longterm/longterm.component.html
@@ -85,12 +85,7 @@
 
       <ng-container matColumnDef="comments">
         <th mat-header-cell *matHeaderCellDef>Comments</th>
-        <td
-          mat-cell
-          *matCellDef="let item"
-          (click)="openEditDialog(item)"
-          class="comments-field"
-        >
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)" class="comments-field">
           {{ item.comments ?? '-' }}
         </td>
       </ng-container>
