--- a/apps/frontend/src/app/components/file-upload/file-upload.component.scss
+++ b/apps/frontend/src/app/components/file-upload/file-upload.component.scss
@@ -15,6 +15,14 @@
   flex-direction: column;
 }
 
+@media (max-width: 1027px) {
+  .file-container {
+    width: 100%;
+    margin-right: 0;
+    margin: 1.5em 0;
+  }
+}
+
 .file-upload-icon {
   width: 100px;
 }
