--- a/apps/frontend/src/app/pages/blacklist/create-blacklist-entry-dialog/create-blacklist-entry.component.html
+++ b/apps/frontend/src/app/pages/blacklist/create-blacklist-entry-dialog/create-blacklist-entry.component.html
@@ -37,14 +37,12 @@
         type="datetime-local"
       />
     </mat-form-field>
-
-    
   </div>
 
   <div class="dialog-row">
     <button class="secondary-btn" mat-raised-button mat-dialog-close type="button">Cancel</button>
     <button class="action-btn" mat-raised-button type="submit">
-      <div *ngIf="!isLoading">Add Announcement</div>
+      <div *ngIf="!isLoading">Add Blacklist Entry</div>
       <div *ngIf="isLoading" class="btn-spinner">
         <mat-icon><mat-spinner diameter="21" color="white"></mat-spinner></mat-icon>
       </div>
