completed update blacklist dialog. Had to change Ecma script

--- a/apps/frontend/src/app/components/blacklist-widget/blacklist-widget.component.html
+++ b/apps/frontend/src/app/components/blacklist-widget/blacklist-widget.component.html
@@ -29,7 +29,7 @@
   </div>
 
   <div class="action-bar-container">
-    <button mat-raised-button class="secondary-btn" (click)="updateBlacklistDialog()">
+    <button mat-raised-button class="secondary-btn" (click)="openEditBlacklist(this.blacklist)">
       Edit <mat-icon>https</mat-icon>
     </button>
   </div>
