--- a/apps/frontend/src/app/pages/blacklist/blacklist.component.html
+++ b/apps/frontend/src/app/pages/blacklist/blacklist.component.html
@@ -1,6 +1,8 @@
 <main>
   <div class="table-actions" style="justify-content: end">
-    <button mat-raised-button class="action-btn" (click)="openCreateBlacklistDialog()">Add blacklist <mat-icon>https</mat-icon></button>
+    <button mat-raised-button class="action-btn" (click)="openCreateBlacklistDialog()">
+      Add blacklist <mat-icon>https</mat-icon>
+    </button>
   </div>
   <hr />
   <section class="blacklist-container" *ngIf="!isLoading">
