--- a/apps/frontend/src/app/pages/longterm/create-long-term-dialog/create-long-term-dialog.component.html
+++ b/apps/frontend/src/app/pages/longterm/create-long-term-dialog/create-long-term-dialog.component.html
@@ -10,16 +10,28 @@
   </div>
   <hr />
 
-  <mat-form-field autocomplete="off" class="full-width">
-    <mat-label>Room nr.</mat-label>
-    <input #room matInput type="number" formControlName="room" [matAutocomplete]="roomOptions" />
-    <mat-autocomplete autoActiveFirstOption #roomOptions="matAutocomplete">
-      <mat-option *ngFor="let option of filteredRooms | async" [value]="option">
-        {{ option }}
-      </mat-option>
-    </mat-autocomplete>
-    <mat-error> {{ getErrorMessage() }} </mat-error>
-  </mat-form-field>
+  <div class="dialog-row">
+    <mat-form-field autocomplete="off">
+      <mat-label>Room nr.</mat-label>
+      <input #room matInput type="number" formControlName="room" [matAutocomplete]="roomOptions" />
+      <mat-autocomplete autoActiveFirstOption #roomOptions="matAutocomplete">
+        <mat-option *ngFor="let option of filteredRooms | async" [value]="option">
+          {{ option }}
+        </mat-option>
+      </mat-autocomplete>
+      <mat-error> {{ getErrorMessage() }} </mat-error>
+    </mat-form-field>
+
+    <mat-form-field autocomplete="off">
+      <mat-label>Date in</mat-label>
+      <input
+        onclick="this.showPicker()"
+        matInput
+        type="datetime-local"
+        formControlName="dateIn"
+      />
+    </mat-form-field>
+  </div>
 
   <div class="dialog-row">
     <mat-form-field autocomplete="off">
