Remove time-option from date pick for field "dateNeeded" in long term

--- a/apps/frontend/src/app/pages/longterm/create-long-term-dialog/create-long-term-dialog.component.html
+++ b/apps/frontend/src/app/pages/longterm/create-long-term-dialog/create-long-term-dialog.component.html
@@ -61,7 +61,7 @@
       <input
         onclick="this.showPicker()"
         matInput
-        type="datetime-local"
+        type="date"
         formControlName="dateNeeded"
       />
     </mat-form-field>
