--- a/apps/frontend/src/app/pages/longterm/update-long-term-dialog/update-long-term-dialog.component.html
+++ b/apps/frontend/src/app/pages/longterm/update-long-term-dialog/update-long-term-dialog.component.html
@@ -52,7 +52,7 @@
       <input
         onclick="this.showPicker()"
         matInput
-        type="datetime-local"
+        type="date"
         formControlName="dateNeeded"
       />
     </mat-form-field>
