--- a/apps/frontend/src/app/pages/blacklist/create-blacklist-entry-dialog/create-blacklist-entry.component.html
+++ b/apps/frontend/src/app/pages/blacklist/create-blacklist-entry-dialog/create-blacklist-entry.component.html
@@ -8,7 +8,7 @@
 <form [formGroup]="createBlacklistForm" (submit)="onSubmit()" class="dialog-container">
   <div class="title-container">
     <h1>Add Blacklist Entry</h1>
-    <a mat-dialog-close type="button">X</a>
+    <button mat-dialog-close type="button" class="close-dialog-btn">X</button>
   </div>
   <hr />
 
