--- a/apps/frontend/src/app/pages/blacklist/update-blacklist-entry-dialog/update-blacklist-entry.component.html
+++ b/apps/frontend/src/app/pages/blacklist/update-blacklist-entry-dialog/update-blacklist-entry.component.html
@@ -7,7 +7,10 @@
 ></frontend-file-upload>
 
 <form [formGroup]="updateBlacklistForm" (submit)="onSubmit()">
-  <h1>Update Blacklist Entry</h1>
+  <div class="title-container">
+    <h1>Update Blacklist Entry</h1>
+    <button mat-dialog-close type="button" class="close-dialog-btn">X</button>
+  </div>
   <hr />
 
   <mat-form-field class="full-width" autocomplete="off">
