feat: 🎸 Rename Add xxx to Create

--- a/apps/frontend/src/app/pages/cars/create-car-entry-dialog/create-car-dialog.component.html
+++ b/apps/frontend/src/app/pages/cars/create-car-entry-dialog/create-car-dialog.component.html
@@ -124,7 +124,7 @@
     <button class="secondary-btn" type="button" mat-raised-button mat-dialog-close>Cancel</button>
 
     <button class="action-btn" mat-flat-button type="submit">
-      <div *ngIf="!isLoading">Add Car</div>
+      <div *ngIf="!isLoading">Create</div>
       <div *ngIf="isLoading" class="btn-spinner">
         <mat-icon><mat-spinner diameter="21" color="white"></mat-spinner></mat-icon>
       </div>
