--- a/apps/frontend/src/app/pages/checkin/create-checkin-dialog/create-checkin-dialog.component.html
+++ b/apps/frontend/src/app/pages/checkin/create-checkin-dialog/create-checkin-dialog.component.html
@@ -105,7 +105,7 @@
   <div class="dialog-row">
     <button mat-raised-button class="secondary-btn" mat-dialog-close>Cancel</button>
     <button mat-raised-button class="action-btn" type="submit">
-      <div *ngIf="!isLoading">Add check in</div>
+      <div *ngIf="!isLoading">Create</div>
       <div *ngIf="isLoading" class="btn-spinner">
         <mat-icon><mat-spinner diameter="21" color="white"></mat-spinner></mat-icon>
       </div>
