fix bike not having updated state on edit modal

--- a/apps/frontend/src/app/pages/bikes/bikes.component.html
+++ b/apps/frontend/src/app/pages/bikes/bikes.component.html
@@ -92,7 +92,7 @@
             <input
               type="checkbox"
               [checked]="item.bikeFormCompleted"
-              (change)="updateBikeFormCompleted(item.bikeId, item.bikeFormCompleted)"
+              (change)="updateBikeFormCompleted(item)"
             />
             <span class="checkmark" style="top: 0; margin-left: 20px"></span>
           </label>
