feat: 🎸 make update dialog show current files

--- a/apps/frontend/src/app/pages/cars/update-car-entry-dialog/update-car-dialog.component.html
+++ b/apps/frontend/src/app/pages/cars/update-car-entry-dialog/update-car-dialog.component.html
@@ -1,6 +1,7 @@
 <frontend-file-upload
   #fileUpload
   [parentType]="'cars'"
+  [existingFiles]="files"
   (submissionFinishedEvent)="finalizeSubmission($event)"
   (containsInvalidFilesEvent)="updateFilesStatus($event)"
 ></frontend-file-upload>
