--- a/apps/frontend/src/app/components/dashboard-sections/dashboard-document-section/dashboard-document-section.component.html
+++ b/apps/frontend/src/app/components/dashboard-sections/dashboard-document-section/dashboard-document-section.component.html
@@ -1,7 +1,7 @@
 <h1>Documents</h1>
 <hr />
-<div class="document-container">
-  <div *ngFor="let document of documentList" class="dashboard-document">
+<div class="item-container">
+  <div *ngFor="let document of documentList" class="dashboard-item">
     <h2>{{ displayTitle(document.title) }}</h2>
     <button
       mat-raised-button
