add it to dashboard

--- a/apps/frontend/src/app/pages/dashboard/dashboard.component.html
+++ b/apps/frontend/src/app/pages/dashboard/dashboard.component.html
@@ -2,5 +2,6 @@
   <frontend-dashboard-links></frontend-dashboard-links>
   <frontend-weather-widget></frontend-weather-widget>
   <frontend-dashboard-notification-section></frontend-dashboard-notification-section>
+  <frontend-dashboard-announcements-section></frontend-dashboard-announcements-section>
   <frontend-dashboard-document-section></frontend-dashboard-document-section>
 </main>
