Adding task notification widget to dashboard. Need to fix buttons

--- a/apps/frontend/src/app/components/dashboard-sections/dashboard-notification-section/dashboard-notification-section.component.html
+++ b/apps/frontend/src/app/components/dashboard-sections/dashboard-notification-section/dashboard-notification-section.component.html
@@ -1,3 +1,4 @@
 <h1>Notifications</h1>
 <hr />
 <frontend-car-notification-widget></frontend-car-notification-widget>
+<frontend-tasks-notification-widget></frontend-tasks-notification-widget>
