--- a/apps/frontend/src/app/pages/longterm/create-long-term-dialog/create-long-term-dialog.component.html
+++ b/apps/frontend/src/app/pages/longterm/create-long-term-dialog/create-long-term-dialog.component.html
@@ -24,12 +24,7 @@
 
     <mat-form-field autocomplete="off">
       <mat-label>Date in</mat-label>
-      <input
-        onclick="this.showPicker()"
-        matInput
-        type="datetime-local"
-        formControlName="dateIn"
-      />
+      <input onclick="this.showPicker()" matInput type="datetime-local" formControlName="dateIn" />
     </mat-form-field>
   </div>
 
@@ -58,12 +53,7 @@
 
     <mat-form-field class="remove-error-message">
       <mat-label>Date needed</mat-label>
-      <input
-        onclick="this.showPicker()"
-        matInput
-        type="date"
-        formControlName="dateNeeded"
-      />
+      <input onclick="this.showPicker()" matInput type="date" formControlName="dateNeeded" />
     </mat-form-field>
   </div>
 
