--- a/apps/frontend/src/app/pages/longterm/update-long-term-dialog/update-long-term-dialog.component.html
+++ b/apps/frontend/src/app/pages/longterm/update-long-term-dialog/update-long-term-dialog.component.html
@@ -49,12 +49,7 @@
 
     <mat-form-field class="remove-error-message">
       <mat-label>Date needed</mat-label>
-      <input
-        onclick="this.showPicker()"
-        matInput
-        type="date"
-        formControlName="dateNeeded"
-      />
+      <input onclick="this.showPicker()" matInput type="date" formControlName="dateNeeded" />
     </mat-form-field>
   </div>
 
