--- a/apps/frontend/src/app/pages/tasks/tasks.component.html
+++ b/apps/frontend/src/app/pages/tasks/tasks.component.html
@@ -44,10 +44,7 @@
           Complete
           <ng-container *ngIf="isPassed(item.time)">
             <span class="alert-container">
-              <img
-                src="../../../assets/icons/alerts/critical-alert-icon.svg"
-                alt="alert icon"
-              />
+              <img src="../../../assets/icons/alerts/critical-alert-icon.svg" alt="alert icon" />
             </span>
           </ng-container>
         </button>
@@ -117,10 +114,7 @@
           Complete
           <ng-container *ngIf="isPassed(item.time)">
             <span class="alert-container">
-              <img
-                src="../../../assets/icons/alerts/critical-alert-icon.svg"
-                alt="alert icon"
-              />
+              <img src="../../../assets/icons/alerts/critical-alert-icon.svg" alt="alert icon" />
             </span>
           </ng-container>
         </button>
