--- a/apps/frontend/src/app/pages/blacklist/create-blacklist-entry-dialog/create-blacklist-entry.component.html
+++ b/apps/frontend/src/app/pages/blacklist/create-blacklist-entry-dialog/create-blacklist-entry.component.html
@@ -7,7 +7,7 @@
 
 <form [formGroup]="createBlacklistForm" (submit)="onSubmit()" class="dialog-container">
   <div class="title-container">
-    <h1>Add Blacklist Entry</h1>
+    <h1>Add Unwanted Guest</h1>
     <button mat-dialog-close type="button" class="close-dialog-btn">X</button>
   </div>
   <hr />
@@ -37,7 +37,7 @@
         onclick="this.showPicker()"
         formControlName="expiresAt"
         matInput
-        type="datetime-local"
+        type="date"
       />
     </mat-form-field>
   </div>
