--- a/apps/frontend/src/app/pages/blacklist/update-blacklist-entry-dialog/update-blacklist-entry.component.html
+++ b/apps/frontend/src/app/pages/blacklist/update-blacklist-entry-dialog/update-blacklist-entry.component.html
@@ -8,7 +8,7 @@
 
 <form [formGroup]="updateBlacklistForm" (submit)="onSubmit()">
   <div class="title-container">
-    <h1>Update Blacklist Entry</h1>
+    <h1>Update unwanted guest</h1>
     <button mat-dialog-close type="button" class="close-dialog-btn">X</button>
   </div>
   <hr />
@@ -38,7 +38,7 @@
         formControlName="expiresAt"
         matInput
         [min]="today"
-        type="datetime-local"
+        type="date"
       />
     </mat-form-field>
   </div>
