--- a/apps/frontend/src/styles.css
+++ b/apps/frontend/src/styles.css
@@ -116,3 +116,15 @@ body {
   width: 20px;
   height: 20px;
 }
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
