feat: 🎸 update doc button styling

--- a/apps/frontend/src/app/components/dashboard-sections/dashboard-document-section/dashboard-document-section.component.html
+++ b/apps/frontend/src/app/components/dashboard-sections/dashboard-document-section/dashboard-document-section.component.html
@@ -5,10 +5,10 @@
     <h2>{{ displayTitle(document.title) }}</h2>
     <button
       mat-raised-button
-      class="action-btn"
+      class="secondary-btn"
       (click)="openSeeDocumentDialog(document.documentId)"
     >
-      View <mat-icon aria-hidden="false">remove_red_eye</mat-icon>
+      <img src="assets/icons/link-icon.svg" alt="link icon" class="link-icon" />
     </button>
   </div>
 </div>
