feat: 🎸 update styling for car not

--- a/apps/frontend/src/app/components/dashboard-sections/dashboard-notification-section/dashboard-notification-section.component.html
+++ b/apps/frontend/src/app/components/dashboard-sections/dashboard-notification-section/dashboard-notification-section.component.html
@@ -1,3 +1,5 @@
 <h1>Notifications</h1>
 <hr />
-<frontend-car-notification-widget></frontend-car-notification-widget>
+<section class="item-container">
+  <frontend-car-notification-widget></frontend-car-notification-widget>
+</section>
