--- a/apps/frontend/src/app/components/dashboard-widgets/car-notification-widget/car-notification-widget.component.html
+++ b/apps/frontend/src/app/components/dashboard-widgets/car-notification-widget/car-notification-widget.component.html
@@ -28,10 +28,10 @@
   </p>
 
   <div class="data-container">
-    <span>Future({{ futureCarList.length }})</span>
-    <span class="ready" *ngIf="readyCarList.length > 0"> Ready({{ readyCarList.length }}) </span>
+    <span>Future <br>({{ futureCarList.length }})</span>
+    <span class="ready" *ngIf="readyCarList.length > 0"> Ready <br>({{ readyCarList.length }}) </span>
     <span class="overdue" *ngIf="overdueCarList.length > 0">
-      Overdue({{ overdueCarList.length }})
+      Overdue <br>({{ overdueCarList.length }})
     </span>
   </div>
 </div>
