Adjusted a few things to try and get ready and overdue lists to populate

--- a/apps/frontend/src/app/components/dashboard-sections/dashboard-notification-section/dashboard-notification-section.component.html
+++ b/apps/frontend/src/app/components/dashboard-sections/dashboard-notification-section/dashboard-notification-section.component.html
@@ -1,4 +1,8 @@
 <h1>Notifications</h1>
 <hr />
-<frontend-car-notification-widget></frontend-car-notification-widget>
-<frontend-tasks-notification-widget></frontend-tasks-notification-widget>
+<div class="notification-container">
+  <div class="dashboard-notifcation">
+    <frontend-car-notification-widget></frontend-car-notification-widget>
+    <frontend-tasks-notification-widget></frontend-tasks-notification-widget>
+  </div>
+</div>
