feat: 🎸 update h1's to uppercase

--- a/apps/frontend/src/app/app.component.html
+++ b/apps/frontend/src/app/app.component.html
@@ -106,7 +106,9 @@
           [ngClass]="{ 'active-nav': title === 'Unwanted guests' }"
         >
           <mat-icon aria-hidden="false">pan_tool</mat-icon>
-          <span class="side-nav-item" [ngClass]="{ collapsible: sidebarCollapsed }">Unwanted guests</span>
+          <span class="side-nav-item" [ngClass]="{ collapsible: sidebarCollapsed }"
+            >Unwanted guests</span
+          >
         </button>
         <button
           mat-list-item
