--- a/apps/frontend/src/app/pages/assignments/assignments.component.html
+++ b/apps/frontend/src/app/pages/assignments/assignments.component.html
@@ -1,9 +1,9 @@
 <main>
   <div class="table-actions" style="justify-content: end">
     <div class="table-buttons">
-      <button mat-raised-button class="basic-btn" (click)="openTableInfo()">Table info</button>
+      <button mat-raised-button class="basic-btn" (click)="openTableInfo()">Table Info</button>
       <button mat-raised-button class="action-btn" (click)="openCreateDialog()">
-        Add assignment
+        Add Assignment
       </button>
     </div>
   </div>
