--- a/apps/frontend/src/app/pages/bikes/bikes.component.html
+++ b/apps/frontend/src/app/pages/bikes/bikes.component.html
@@ -28,7 +28,7 @@
     </div>
 
     <div class="table-buttons">
-      <button mat-raised-button class="basic-btn" (click)="openTableInfo()">Table info</button>
+      <button mat-raised-button class="basic-btn" (click)="openTableInfo()">Table Info</button>
       <button class="action-btn" (click)="openCreateDialog()" mat-raised-button>Add Bike</button>
     </div>
   </div>
