--- a/apps/frontend/src/app/pages/documents/documents.component.html
+++ b/apps/frontend/src/app/pages/documents/documents.component.html
@@ -30,7 +30,7 @@
       (click)="openCreateDialog()"
       data-cy="documents-add-btn"
     >
-      Add document <mat-icon>https</mat-icon>
+      Add Document <mat-icon>https</mat-icon>
     </button>
   </div>
   <hr />
