--- a/apps/frontend/src/app/pages/longterm/longterm.component.html
+++ b/apps/frontend/src/app/pages/longterm/longterm.component.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class="table-buttons">
-      <button mat-raised-button class="basic-btn" (click)="openTableInfo()">Table info</button>
+      <button mat-raised-button class="basic-btn" (click)="openTableInfo()">Table Info</button>
       <button class="secondary-btn" (click)="toggleShowAll()" mat-raised-button>
         {{ showAll ? 'Show Current' : 'Show All' }}
       </button>
@@ -37,7 +37,7 @@
         (click)="openCreateDialog()"
         data-cy="long-term-create-dialog-button"
       >
-        Add long term
+        Add Long Term
       </button>
     </div>
   </div>
