--- a/apps/frontend/src/app/components/file-upload/file-upload.component.html
+++ b/apps/frontend/src/app/components/file-upload/file-upload.component.html
@@ -2,7 +2,7 @@
   <ng-container *ngIf="selectedFiles.length === 0 && existingFiles.length === 0">
     <img src="assets/icons/file-upload.svg" alt="File upload icon" class="file-upload-icon" />
     <br />
-    <h1 class="">Upload files</h1>
+    <h1 class="">Upload Files</h1>
     <p class="file-upload-text">Must be a {{ getExtensionsAsFormattedString() }}</p>
   </ng-container>
 
