--- a/apps/frontend/src/app/components/manager-access-dialog/manager-access-dialog.component.html
+++ b/apps/frontend/src/app/components/manager-access-dialog/manager-access-dialog.component.html
@@ -4,7 +4,7 @@
   class="dialog-container"
   data-cy="manager-access-dialog"
 >
-  <h1>Manager access</h1>
+  <h1>Manager Access</h1>
   <hr />
 
   <p *ngIf="!dialogData">Your access has expired!</p>
