--- a/apps/frontend/src/app/pages/checkout/checkout.component.html
+++ b/apps/frontend/src/app/pages/checkout/checkout.component.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="table-buttons">
-      <button mat-raised-button class="basic-btn" (click)="openTableInfo()">Table info</button>
+      <button mat-raised-button class="basic-btn" (click)="openTableInfo()">Table Info</button>
       <button mat-raised-button class="action-btn" (click)="openCreateDialog()">
         Add Check Out
       </button>
