--- a/apps/frontend/src/app/pages/tasks/tasks.component.html
+++ b/apps/frontend/src/app/pages/tasks/tasks.component.html
@@ -3,7 +3,7 @@
   <div class="table-actions">
     <h1>Morning</h1>
 
-    <button mat-raised-button class="basic-btn" (click)="openTableInfo()">Table info</button>
+    <button mat-raised-button class="basic-btn" (click)="openTableInfo()">Table Info</button>
   </div>
   <hr />
 
@@ -44,10 +44,7 @@
           Complete
           <ng-container *ngIf="isPassed(item.time)">
             <span class="alert-container">
-              <img
-                src="../../../assets/icons/alerts/critical-alert-icon.svg"
-                alt="alert icon"
-              />
+              <img src="../../../assets/icons/alerts/critical-alert-icon.svg" alt="alert icon" />
             </span>
           </ng-container>
         </button>
@@ -76,7 +73,7 @@
   <div class="table-actions">
     <h1>Evening</h1>
 
-    <button mat-raised-button class="basic-btn" (click)="openTableInfo()">Table info</button>
+    <button mat-raised-button class="basic-btn" (click)="openTableInfo()">Table Info</button>
   </div>
   <hr />
 
@@ -117,10 +114,7 @@
           Complete
           <ng-container *ngIf="isPassed(item.time)">
             <span class="alert-container">
-              <img
-                src="../../../assets/icons/alerts/critical-alert-icon.svg"
-                alt="alert icon"
-              />
+              <img src="../../../assets/icons/alerts/critical-alert-icon.svg" alt="alert icon" />
             </span>
           </ng-container>
         </button>
