--- a/apps/frontend/src/styles.css
+++ b/apps/frontend/src/styles.css
@@ -125,6 +125,6 @@ input::-webkit-inner-spin-button {
 }
 
 /* Firefox */
-input[type=number] {
+input[type='number'] {
   -moz-appearance: textfield;
 }
