--- a/apps/frontend/src/app/pages/assignments/assignments.component.html
+++ b/apps/frontend/src/app/pages/assignments/assignments.component.html
@@ -14,19 +14,19 @@
       <ng-container matColumnDef="room">
         <th mat-header-cell *matHeaderCellDef>Room nr.</th>
         <td mat-cell *matCellDef="let item">
-          {{ item.room ? item.room : '-' }}
+          {{ item.room }}
         </td>
       </ng-container>
       <ng-container matColumnDef="task">
         <th mat-header-cell *matHeaderCellDef>Task</th>
         <td mat-cell *matCellDef="let item">
-          {{ item.task ? item.task : '-' }}
+          {{ item.task }}
         </td>
       </ng-container>
       <ng-container matColumnDef="comments">
         <th mat-header-cell *matHeaderCellDef>Comments</th>
         <td mat-cell *matCellDef="let item" class="comments-field">
-          {{ item.comments ? item.comments : '-' }}
+          {{ item.comments }}
         </td>
       </ng-container>
       <ng-container matColumnDef="requestedBy">
@@ -42,13 +42,13 @@
       <ng-container matColumnDef="performedBy">
         <th mat-header-cell *matHeaderCellDef>Performed by</th>
         <td mat-cell *matCellDef="let item">
-          {{ item.performedBy ? item.performedBy : '-' }}
+          {{ item.performedBy }}
         </td>
       </ng-container>
       <ng-container matColumnDef="completedAt">
         <th mat-header-cell *matHeaderCellDef>Performed at</th>
         <td mat-cell *matCellDef="let item">
-          {{ item.completedAt ? (item.completedAt | date : 'dd/MM HH:mm') : '-' }}
+          {{ item.completedAt ? (item.completedAt | date : 'dd/MM HH:mm') : '' }}
         </td>
       </ng-container>
 
